Update website for CivBuddy v2

--- a/v1.html
+++ b/v1.html
@@ -1,6 +1,9 @@
 ---
 title: Calculator for Francis Tresham's Civilization Board Game
 layout: markdown
+isCurrent: false
+githubPath: tree/v1-gwt
+appurl: http://app1.civbuddy.org
 ---
 
 <blockquote>This page is about {{ site.name }} version 1, which has been superseded by
@@ -13,12 +16,12 @@ Feature-wise, v1 already had most of what v2 can do, but the UI was very differe
 
 [![Variants]({{ site.baseurl }}/images/screenshots/screenshot-1_t.jpg)]({{ site.baseurl }}/images/screenshots/screenshot-1.png) [![Cards]({{ site.baseurl }}/images/screenshots/screenshot-2_t.jpg)]({{ site.baseurl }}/images/screenshots/screenshot-2.png) [![Funds]({{ site.baseurl }}/images/screenshots/screenshot-3_t.jpg)]({{ site.baseurl }}/images/screenshots/screenshot-3.png) [![Card Info]({{ site.baseurl }}/images/screenshots/screenshot-4_t.jpg)]({{ site.baseurl }}/images/screenshots/screenshot-4.png)
 
-{{ site.name }} v1 is still deployed ([link]({{ site.appurl_v1 }}), but no longer maintained,
+{{ site.name }} v1 is still deployed ([link]({{ page.appurl }}), but no longer maintained,
 so you may see some parts of it start to fail.
 
 ## Development Setup
 
-v1 is no longer maintained, but for completeness sake, here is how to set it up for development.
+v1 is no longer maintained, but for completeness' sake, here is how to set it up for development.
 
 ### Building {{ site.name }} v1
 
