Add a 'force reload' menu option to all pages for home screen apps

--- a/resources/funds.html
+++ b/resources/funds.html
@@ -102,6 +102,9 @@
                             <p class="text-info mx-2 my-0" id="variantOptions"></p>
                             <div class="dropdown-divider"></div>
                             <div id="otherLanguageFlags"></div>
+                            <a class="nav-link" href="#" onclick="CivBuddy.buttonClick(this, 'funds', 'reload')"><span
+                                class="oi oi-reload mx-2" aria-hidden="true"></span><span
+                                data-l10n-id="games-navbar-reload"></span></a>
                             <a class="nav-link" href="index.html"><span class="oi oi-account-logout mx-2"
                                 aria-hidden="true"></span><span data-l10n-id="cards-navbar-games"></span></a>
                         </div>
