--- a/resources/players.html
+++ b/resources/players.html
@@ -48,6 +48,9 @@
                            aria-hidden="true"></span></a>
                         <div class="dropdown-menu dropdown-menu-right">
                             <div id="otherLanguageFlags"></div>
+                            <a class="nav-link" href="#" onclick="CivBuddy.buttonClick(this, 'players', 'reload')"><span
+                                class="oi oi-reload mx-2" aria-hidden="true"></span><span
+                                data-l10n-id="games-navbar-reload"></span></a>
                         </div>
                     </li>
                 </ul>
@@ -55,7 +58,7 @@
         </div>
     </div>
 </nav>
-    
+
 <!-- List of players -->
 <div class="container card-container">
     <div class="row" id="playerList"></div>
