Fix margins in right drop-down menu in responsive scenarios Hide display of rule options when there are none

--- a/resources/index.html
+++ b/resources/index.html
@@ -67,7 +67,7 @@
                                onclick="CivBuddy.buttonClick(this, 'games', 'purge')"><span class="oi oi-warning mx-2"
                                aria-hidden="true"></span><span data-l10n-id="games-navbar-purge"></span></a>
                             <div class="dropdown-divider"></div>
-                            <p class="text-muted mx-2 my-0" style="line-height: 1em;"><small>CivBuddy
+                            <p class="nav-link text-muted ml-2 my-0" style="line-height: 1em;"><small>CivBuddy
                                 Version</small><br><small id="appVersion"></small></p>
                         </div>
                     </li>
