--- a/resources/funds.html
+++ b/resources/funds.html
@@ -97,9 +97,9 @@
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="oi oi-menu"
                            aria-hidden="true"></span></a>
                         <div class="dropdown-menu dropdown-menu-right">
-                            <p class="navbar-brand mx-2 my-0" id="gameName2"></p>
-                            <p class="text-muted mx-2 my-0" id="variantName"></p>
-                            <p class="text-info mx-2 my-0" id="variantOptions"></p>
+                            <p class="nav-link navbar-brand py-0 my-0 ml-2 mr-0" id="gameName2"></p>
+                            <p class="nav-link text-muted py-1 my-0 ml-2" id="variantName"></p>
+                            <p class="nav-link text-info py-0 my-0 ml-2" id="variantOptions"></p>
                             <div class="dropdown-divider"></div>
                             <div id="otherLanguageFlags"></div>
                             <a class="nav-link" href="#" onclick="CivBuddy.buttonClick(this, 'funds', 'reload')"><span
