--- a/resources/index.html
+++ b/resources/index.html
@@ -6,7 +6,7 @@
 
     <script id="gameTemplate" type="x-tmpl-mustache">
         <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12" id="{{ gameKey }}">
-            <div class="card card-clickable border-info mb-3" onclick="CivBuddy.buttonClick(this, 'games', 'select', '{{ gameKey }}')">
+            <div class="card card-clickable border-info mb-3" civbuddy-button="games, select, {{ gameKey }}">
                 <div class="card-header">{{ ruleDisplayName }}
                     <button type="button" class="close" aria-label="Delete Game"
                         onclick="CivBuddy.buttonClick(this, 'games', 'delete', '{{ gameKey }}', '{{ gameName }}', event)">
@@ -36,9 +36,8 @@
         <div class="form-check">
             <label class="form-check-label">
                 <input class="form-check-input" type="radio" name="optionsRadios" value="{{ variantId }}"{{#checked}}
-                    checked=""{{/checked}} onclick="CivBuddy.buttonClick(this, 'games', 'chooseVariant', '{{ variantId }}')">
-                {{ displayName }}
-            </label>
+                    checked=""{{/checked}} onclick="CivBuddy.buttonClick(this, 'games', 'chooseVariant', '{{ variantId }}')"
+            >{{ displayName }}</label>
         </div>
     </script>
 </head>
@@ -53,19 +52,19 @@
             </div>
             <div class="col-2 px-0">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown" id="right-dropdown">
                         <a class="nav-link nav-action fix-padding dropdown-toggle" href="#" role="button"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="oi oi-menu"
                            aria-hidden="true"></span></a>
                         <div class="dropdown-menu dropdown-menu-right">
                             <div id="otherLanguageFlags"></div>
                             <div class="dropdown-divider"></div>
-                            <a class="nav-link" href="#" onclick="CivBuddy.buttonClick(this, 'games', 'reload')"><span
+                            <a class="nav-link" href="#" civbuddy-button="games, reload"><span
                                 class="oi oi-reload mx-2" aria-hidden="true"></span><span
                                 data-l10n-id="games-navbar-reload"></span></a>
-                            <a class="nav-link text-danger" href="#"
-                               onclick="CivBuddy.buttonClick(this, 'games', 'purge')"><span class="oi oi-warning mx-2"
-                               aria-hidden="true"></span><span data-l10n-id="games-navbar-purge"></span></a>
+                            <a class="nav-link text-danger" href="#" civbuddy-button="games, purge"><span
+                                class="oi oi-warning mx-2" aria-hidden="true"></span><span
+                                data-l10n-id="games-navbar-purge"></span></a>
                             <div class="dropdown-divider"></div>
                             <p class="nav-link text-muted ml-2 my-0" style="line-height: 1em;"><small>CivBuddy
                                 Version</small><br><small id="appVersion"></small></p>
@@ -119,7 +118,7 @@
                 </fieldset>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-success" onclick="CivBuddy.buttonClick(this, 'games', 'create')"
+                <button type="button" class="btn btn-success" civbuddy-button="games, create"
                     data-l10n-id="games-newModal-button-create"></button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal"
                     data-l10n-id="games-newModal-button-close"></button>
