--- a/resources/funds.html
+++ b/resources/funds.html
@@ -11,7 +11,7 @@
                     <h4 class="card-title m-0">{{ commodityName }}</h4>
                     <span class="badge badge-info badge-pill{{^n}} d-none{{/n}}">{{ n }}</span>
                     <button type="button" class="close{{^n}} d-none{{/n}}" aria-label="Clear"
-                        onclick="CivBuddy.buttonClick(this, 'funds', 'clearCommodity', '{{ commodityId }}')"
+                        civbuddy-button="funds, clearCommodity, {{ commodityId }}"
                         ><span class="oi oi-delete" aria-hidden="true"></span></button>
                 </div>
                 <div class="card-body">
@@ -26,7 +26,7 @@
     <script id="commodityButtonTemplate" type="x-tmpl-mustache">
         <div class="col-5th commodity-pts"><button type="button"
              class="btn {{#selected}}btn-info{{/selected}}{{^selected}}btn-outline-lightgray{{/selected}}"
-             onclick="CivBuddy.buttonClick(this, 'funds', 'setCommodity', '{{ commodityId }}', {{ n }})">{{ value
+             civbuddy-button="funds, setCommodity, {{ commodityId }}, {{ n }}">{{ value
              }}</button></div>
     </script>
 
@@ -78,21 +78,20 @@
             <!-- Item 4: Toggle lock/summary -->
             <div class="col-1 col-md-2">
                 <p class="navbar-brand nav-action fix-padding mb-0"><a href="#" id="summaryButton"
-                    onclick="CivBuddy.buttonClick(this, 'funds', 'toggleSummary')"><span
+                    civbuddy-button="funds, toggleSummary"><span
                     class="oi oi-lock-unlocked mr-2" aria-hidden="true"></span><span class="d-none d-md-inline-block"
                     data-l10n-id="funds-navbar-summary"></span></a></p>
             </div>
             <!-- Item 5: Clear all funds -->
             <div class="col-2 text-left">
-                <p class="navbar-brand nav-action fix-padding mb-0"><a href="#"
-                    onclick="CivBuddy.buttonClick(this, 'funds', 'clear')"><span class="oi oi-x mr-2"
-                    aria-hidden="true"></span><span class="d-none d-md-inline-block"
+                <p class="navbar-brand nav-action fix-padding mb-0"><a href="#" civbuddy-button="funds, clear"><span
+                    class="oi oi-x mr-2" aria-hidden="true"></span><span class="d-none d-md-inline-block"
                     data-l10n-id="funds-navbar-clear"></span></a></p>
             </div>
             <!-- Item 6: Drop-down menu and language -->
             <div class="col-1 px-0">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown" id="right-dropdown">
                         <a class="nav-link nav-action fix-padding dropdown-toggle" href="#" role="button"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="oi oi-menu"
                            aria-hidden="true"></span></a>
@@ -102,7 +101,7 @@
                             <p class="nav-link text-info py-0 my-0 ml-2" id="variantOptions"></p>
                             <div class="dropdown-divider"></div>
                             <div id="otherLanguageFlags"></div>
-                            <a class="nav-link" href="#" onclick="CivBuddy.buttonClick(this, 'funds', 'reload')"><span
+                            <a class="nav-link" href="#" civbuddy-button="funds, reload"><span
                                 class="oi oi-reload mx-2" aria-hidden="true"></span><span
                                 data-l10n-id="games-navbar-reload"></span></a>
                             <a class="nav-link" href="index.html"><span class="oi oi-account-logout mx-2"
@@ -173,7 +172,7 @@
                     <a class="btn btn-success add-situation-id" href="cards.html" role="button"><span
                         class="oi oi-arrow-thick-left mr-2" aria-hidden="true"></span><span
                         data-l10n-id="funds-summary-footer-back"></span></a>
-                    <button type="button" onclick="CivBuddy.buttonClick(this, 'funds', 'toggleSummary')"
+                    <button type="button" civbuddy-button="funds, toggleSummary"
                         class="btn btn-success float-right"><span class="oi oi-lock-unlocked mr-2"
                         aria-hidden="true"></span><span data-l10n-id="funds-summary-footer-unlock"></span></button>
                 </div>
