Exchange icons used for funds summary in order to be clearer on what the actions do

--- a/resources/funds.html
+++ b/resources/funds.html
@@ -79,7 +79,7 @@
             <div class="col-1 col-md-2">
                 <p class="navbar-brand nav-action fix-padding mb-0"><a href="#" id="summaryButton"
                     civbuddy-button="funds, toggleSummary"><span
-                    class="oi oi-lock-unlocked mr-2" aria-hidden="true"></span><span class="d-none d-md-inline-block"
+                    class="oi oi-spreadsheet mr-2" aria-hidden="true"></span><span class="d-none d-md-inline-block"
                     data-l10n-id="funds-navbar-summary"></span></a></p>
             </div>
             <!-- Item 5: Clear all funds -->
@@ -173,7 +173,7 @@
                         class="oi oi-arrow-thick-left mr-2" aria-hidden="true"></span><span
                         data-l10n-id="funds-summary-footer-back"></span></a>
                     <button type="button" civbuddy-button="funds, toggleSummary"
-                        class="btn btn-success float-right"><span class="oi oi-lock-unlocked mr-2"
+                        class="btn btn-success float-right"><span class="oi oi-pencil mr-2"
                         aria-hidden="true"></span><span data-l10n-id="funds-summary-footer-unlock"></span></button>
                 </div>
             </div>
