Enable funds summary also when treasury !== 0

--- a/resources/funds.html
+++ b/resources/funds.html
@@ -123,7 +123,7 @@
                     <label class="col-form-label col-form-label-lg d-inline-block mr-4" for="inputTreasury"
                         data-l10n-id="funds-treasury"></label>
                     <input class="form-control d-inline-block" placeholder="0" id="inputTreasury" type="number"
-                        maxlength="3" size="3">
+                        maxlength="3" size="3" min="-99" max="99" step="1">
                     <div class="form-check lead noselect mt-3" id="useMiningYield">
                         <label class="form-check-label">
                             <input class="form-check-input" style="margin-top: 8px;" value="" checked=""
