Update commodity names on the summary card when language is changed

--- a/resources/funds.html
+++ b/resources/funds.html
@@ -32,7 +32,7 @@
 
     <script id="summaryRowTemplate" type="x-tmpl-mustache">
         <tr class="summary-row-commodity">
-            <th scope="row">{{ commodityName }}</th>
+            <th scope="row" commodity="{{ commodityId }}">{{ commodityName }}</th>
             <td>{{ n }}</td>
             <td class="text-right">{{ value }}</td>
         </tr>
