Ensure right alignment of right menu dropdown

--- a/resources/funds.html
+++ b/resources/funds.html
@@ -89,7 +89,7 @@
                     data-l10n-id="funds-navbar-clear"></span></a></p>
             </div>
             <!-- Item 6: Drop-down menu and language -->
-            <div class="col-1 px-0">
+            <div class="col-1 px-0 text-right">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown" id="right-dropdown">
                         <a class="nav-link nav-action fix-padding dropdown-toggle" href="#" role="button"
