--- a/resources/players.html
+++ b/resources/players.html
@@ -40,7 +40,7 @@
                 <p class="navbar-brand mb-0"><a href="index.html"><span class="oi oi-arrow-thick-left mr-4"
                    aria-hidden="true" style="position: relative; top: 3px;"></span></a><span id="gameName"></span></p>
             </div>
-            <div class="col-4 px-0">
+            <div class="col-4 px-0 text-right">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown" id="right-dropdown">
                         <a class="nav-link nav-action fix-padding dropdown-toggle" href="#" role="button"
