--- a/resources/cards.html
+++ b/resources/cards.html
@@ -119,7 +119,7 @@
                     data-l10n-id="cards-navbar-buy"></span></a></p>
             </div>
             <!-- Item 7: Drop-down menu and language -->
-            <div class="col-1 px-0">
+            <div class="col-1 px-0 text-right">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown" id="right-dropdown">
                         <a class="nav-link nav-action fix-padding dropdown-toggle" href="#" role="button"
