--- a/resources/index.html
+++ b/resources/index.html
@@ -50,7 +50,7 @@
             <div class="col-10 px-0">
                 <p class="navbar-brand fix-padding mb-0">CivBuddy</p>
             </div>
-            <div class="col-2 px-0">
+            <div class="col-2 px-0 text-right">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown" id="right-dropdown">
                         <a class="nav-link nav-action fix-padding dropdown-toggle" href="#" role="button"
