Show lion background only on 'games' and 'players' pages (the other pages are usually too full)

--- a/resources/index.html
+++ b/resources/index.html
@@ -41,7 +41,7 @@
         </div>
     </script>
 </head>
-<body>
+<body class="lion-bg">
 
 <!-- Navigation -->
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
