--- a/resources/players.html
+++ b/resources/players.html
@@ -30,7 +30,7 @@
         </div>
     </script>
 </head>
-<body>
+<body class="lion-bg">
 
 <!-- Navigation -->
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
