Minor addition to homepage

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@ so that everyone can concentrate on all the fun parts of the game.
 
 - Works on mobile devices as well as desktop PCs, on all modern operating systems\\
   [![Cards on larger screen]({{ site.baseurl }}/images/screenshots/screenshot-9_t.jpg)]({{ site.baseurl }}/images/screenshots/screenshot-9.png)
+- Fully localized for German :de: and English :us: You can switch languages on the fly using the drop-down menu item.
+  More languages could easily be added - if you want to contribute a translation, suggest it in a GitHub issue.
 - Displays the current cost for each civilization card, considering the player's current bonus situation
 - Funds and treasury are taken into account
 - Detail information on each civilization card is available
@@ -38,6 +40,24 @@ so that everyone can concentrate on all the fun parts of the game.
 **[Click here]({{ page.appurl }})** to start using {{ site.name }} right now! It's free.
 
 > **Pro Tip:** Talk to your fellow players beforehand, and get them all to agree on using {{ site.name }}.
+
+### Use it like a mobile app
+
+{{ site.name }} is a Web application, but you can use it like a mobile app, which will give it full-screen
+support without browser toolbars etc.
+
+On iOS:
+
+1. Open [{{ site.name }}]({{ page.appurl }}) in Safari (yes, it must be Safari, as far as I know).
+2. Press the *Share* button (looks like a box with an arrow coming out of it).
+3. In the sharing options, choose *Add to Home Screen*
+4. This will create an app icon on your phone which runs CivBuddy as if it was a native iPhone app.
+
+On Android:
+
+1. On Android, the process is the same as on iOS, but the *Add to Home Screen* option is in the drop-down
+   menu of the Chrome browser.
+
 
 ## Development Setup
 
