Remove tooltips from group icons

--- a/resources/cards.html
+++ b/resources/cards.html
@@ -39,8 +39,7 @@
     </script>
 
     <script id="groupIconTemplate" type="x-tmpl-mustache">
-        <img src="img/{{ iconName }}.svg" {{#inline}}class="inline-svg" {{/inline}}alt="{{ groupName }}" title="{{
-            groupName }}">
+        <img src="img/{{ iconName }}.svg" {{#inline}}class="inline-svg" {{/inline}}alt="{{ iconName }}">
     </script>
 
     <script id="cardInfoCreditItemTemplate" type="x-tmpl-mustache">
