Move background lion to the dynamic open space below the cards, if such space is available

--- a/resources/index.html
+++ b/resources/index.html
@@ -41,7 +41,7 @@
         </div>
     </script>
 </head>
-<body class="lion-bg">
+<body>
 
 <!-- Navigation -->
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
@@ -89,6 +89,9 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="row d-none lion-row">
+        <div class="col text-center"><img src="img/lion-bg.png"></div>
     </div>
 </div>
 
