--- a/resources/players.html
+++ b/resources/players.html
@@ -30,7 +30,7 @@
         </div>
     </script>
 </head>
-<body class="lion-bg">
+<body>
 
 <!-- Navigation -->
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
@@ -72,6 +72,9 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="row d-none lion-row">
+        <div class="col text-center"><img src="img/lion-bg.png"></div>
     </div>
 </div>
 
