Show the background lion also on 'cards' and 'funds' pages if there is enough space

--- a/resources/cards.html
+++ b/resources/cards.html
@@ -156,6 +156,9 @@
             </div>
         </div>
     </div>
+    <div class="row d-none lion-row">
+        <div class="col text-center"><img src="img/lion-bg.png"></div>
+    </div>
 </div>
 
 <!-- Card Info Modal -->
