--- a/resources/funds.html
+++ b/resources/funds.html
@@ -179,6 +179,9 @@
             </div>
         </div>
     </div>
+    <div class="row d-none lion-row lion-row-allowed">
+        <div class="col text-center"><img src="img/lion-bg.png"></div>
+    </div>
 </div>
 
 <!-- build:include include/footer.html --><!-- /build -->
