--- a/resources/players.html
+++ b/resources/players.html
@@ -73,7 +73,7 @@
             </div>
         </div>
     </div>
-    <div class="row d-none lion-row">
+    <div class="row d-none lion-row lion-row-allowed">
         <div class="col text-center"><img src="img/lion-bg.png"></div>
     </div>
 </div>
