Disable 'Buy' button on 'cards' page while no cards are planned

--- a/resources/cards.html
+++ b/resources/cards.html
@@ -105,7 +105,7 @@
             </div>
             <!-- Item 5: Filter -->
             <div class="col-1">
-                <p class="navbar-brand nav-action fix-padding mb-0"><a href="#"
+                <p class="navbar-brand nav-action fix-padding mb-0"><a id="filterButton" href="#"
                     civbuddy-button="cards, filter"><img src="img/eye-active.svg"
                     class="inline-svg mr-2 navbar-icon-eye" id="eye-open"><img src="img/eye-inactive.svg"
                     class="inline-svg mr-2 navbar-icon-eye d-none" id="eye-closed"><span
@@ -113,9 +113,9 @@
             </div>
             <!-- Item 6: Buy -->
             <div class="col-2 col-md-1">
-                <p class="navbar-brand nav-action fix-padding mb-0"><a href="#" civbuddy-button="cards, buy"><span
-                    class="oi oi-check mx-2" aria-hidden="true"></span><span class="d-none d-lg-inline-block"
-                    data-l10n-id="cards-navbar-buy"></span></a></p>
+                <p class="navbar-brand nav-action fix-padding mb-0"><a id="buyButton" href="#" class="disabled"
+                    civbuddy-button="cards, buy"><span class="oi oi-check mx-2" aria-hidden="true"></span><span
+                    class="d-none d-lg-inline-block" data-l10n-id="cards-navbar-buy"></span></a></p>
             </div>
             <!-- Item 7: Drop-down menu and language -->
             <div class="col-1 px-0 text-right">
