Disable 'Clear' button on 'funds' page when there is nothing to clear

--- a/resources/funds.html
+++ b/resources/funds.html
@@ -84,9 +84,9 @@
             </div>
             <!-- Item 5: Clear all funds -->
             <div class="col-2 text-left">
-                <p class="navbar-brand nav-action fix-padding mb-0"><a href="#" civbuddy-button="funds, clear"><span
-                    class="oi oi-x mr-2" aria-hidden="true"></span><span class="d-none d-md-inline-block"
-                    data-l10n-id="funds-navbar-clear"></span></a></p>
+                <p class="navbar-brand nav-action fix-padding mb-0"><a href="#" id="clearButton"
+                    civbuddy-button="funds, clear"><span class="oi oi-x mr-2" aria-hidden="true"></span><span
+                    class="d-none d-md-inline-block" data-l10n-id="funds-navbar-clear"></span></a></p>
             </div>
             <!-- Item 6: Drop-down menu and language -->
             <div class="col-1 px-0 text-right">
