Translate CivBuddy version info label

--- a/resources/index.html
+++ b/resources/index.html
@@ -66,8 +66,8 @@
                                 class="oi oi-warning mx-2" aria-hidden="true"></span><span
                                 data-l10n-id="games-navbar-purge"></span></a>
                             <div class="dropdown-divider"></div>
-                            <p class="nav-link text-muted ml-2 my-0" style="line-height: 1em;"><small>CivBuddy
-                                Version</small><br><small id="appVersion"></small></p>
+                            <p class="nav-link text-muted ml-2 my-0" style="line-height: 1em;"><small
+                                data-l10n-id="games-navbar-versionLabel"></small><br><small id="appVersion"></small></p>
                             <a class="nav-link text-muted" target="_blank" href="http://civbuddy.org/"><span
                                 class="oi oi-globe mx-2" aria-hidden="true"></span>civbuddy.org</a>
                         </div>
