--- a/resources/error.html
+++ b/resources/error.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" localStorageUsed="false">
 <head>
     <title>CivBuddy - Error</title>
     <!-- build:include include/head.html --><!-- /build -->
