Change link to civbuddy.org to https

--- a/resources/index.html
+++ b/resources/index.html
@@ -68,7 +68,7 @@
                             <div class="dropdown-divider"></div>
                             <p class="nav-link text-muted ml-2 my-0" style="line-height: 1em;"><small
                                 data-l10n-id="games-navbar-versionLabel"></small><br><small id="appVersion"></small></p>
-                            <a class="nav-link text-muted" target="_blank" href="http://civbuddy.org/"><span
+                            <a class="nav-link text-muted" target="_blank" href="https://civbuddy.org/"><span
                                 class="oi oi-globe mx-2" aria-hidden="true"></span>civbuddy.org</a>
                         </div>
                     </li>
