Update screenshot to recent version

--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@ calculations in the upper three-digit numbers. With {{ site.name }}, this can be
 so that everyone can concentrate on all the fun parts of the game.
 
 [![Variants]({{ site.baseurl }}/images/screenshots/screenshot-5_t.jpg)]({{ site.baseurl }}/images/screenshots/screenshot-5.png)
-[![Cards]({{ site.baseurl }}/images/screenshots/screenshot-6_t.jpg)]({{ site.baseurl }}/images/screenshots/screenshot-6.png)
-[![Funds]({{ site.baseurl }}/images/screenshots/screenshot-7_t.jpg)]({{ site.baseurl }}/images/screenshots/screenshot-7.png)
+[![Cards]({{ site.baseurl }}/images/screenshots/screenshot-6_t.png)]({{ site.baseurl }}/images/screenshots/screenshot-6.png)
 [![Card Info]({{ site.baseurl }}/images/screenshots/screenshot-8_t.jpg)]({{ site.baseurl }}/images/screenshots/screenshot-8.png)
+[![Funds]({{ site.baseurl }}/images/screenshots/screenshot-7_t.png)]({{ site.baseurl }}/images/screenshots/screenshot-7.png)
+[![Funds Summary]({{ site.baseurl }}/images/screenshots/screenshot-10_t.png)]({{ site.baseurl }}/images/screenshots/screenshot-10.png)
 
-- Works on mobile devices as well as desktop PCs, on all modern operating systems\\
-  [![Cards on larger screen]({{ site.baseurl }}/images/screenshots/screenshot-9_t.jpg)]({{ site.baseurl }}/images/screenshots/screenshot-9.png)
+- Works on mobile devices as well as desktop PCs, on all modern operating systems
 - Fully localized for German :de: and English :us: You can switch languages on the fly using the drop-down menu item.
-  More languages could easily be added - if you want to contribute a translation, suggest it in a GitHub issue.
+  More languages could easily be added - if you want to contribute a translation, suggest it in a GitHub issue.\\
+  [![Cards on larger screen]({{ site.baseurl }}/images/screenshots/screenshot-9_t.png)]({{ site.baseurl }}/images/screenshots/screenshot-9.png)
+  &nbsp;
+  [![Larger screen German]({{ site.baseurl }}/images/screenshots/screenshot-9-de_t.png)]({{ site.baseurl }}/images/screenshots/screenshot-9-de.png)
 - Displays the current cost for each civilization card, considering the player's current bonus situation
 - Funds and treasury are taken into account
 - Detail information on each civilization card is available
