--- a/resources/cards.html
+++ b/resources/cards.html
@@ -26,11 +26,12 @@
                     <div style="width: {{ creditBarWidth }}%;">
                         <div class="progress">
                             <div role="progressbar" class="progress-bar bg-info bar-owned" style="width: {{
-                                creditBarOwnedPercent }}%" aria-valuenow="{{ creditBarOwnedValue
+                                creditBarOwnedPercent }}%;" aria-valuenow="{{ creditBarOwnedValue
                                 }}" aria-valuemin="0" aria-valuemax="{{ totalCredit }}"></div>
-                            <div role="progressbar" class="progress-bar bg-success bar-planned d-none" style="width: {{
-                                creditBarPlannedPercent }}%" aria-valuenow="{{ creditBarPlannedValue
-                                }}" aria-valuemin="0" aria-valuemax="{{ totalCredit }}"></div>
+                            <div role="progressbar" class="progress-bar bg-success bar-planned{{^creditBarPlannedValue
+                                }} d-none{{/creditBarPlannedValue}}" style="width: {{ creditBarPlannedPercent }}%;"
+                                aria-valuenow="{{ creditBarPlannedValue }}" aria-valuemin="0" aria-valuemax="{{
+                                totalCredit }}"></div>
                         </div>
                     </div>{{/isOwned}}
                 </div>
