Add missing closing parenthesis in v1.html

--- a/v1.html
+++ b/v1.html
@@ -16,7 +16,7 @@ Feature-wise, v1 already had most of what v2 can do, but the UI was very differe
 
 [![Variants]({{ site.baseurl }}/images/screenshots/screenshot-1_t.jpg)]({{ site.baseurl }}/images/screenshots/screenshot-1.png) [![Cards]({{ site.baseurl }}/images/screenshots/screenshot-2_t.jpg)]({{ site.baseurl }}/images/screenshots/screenshot-2.png) [![Funds]({{ site.baseurl }}/images/screenshots/screenshot-3_t.jpg)]({{ site.baseurl }}/images/screenshots/screenshot-3.png) [![Card Info]({{ site.baseurl }}/images/screenshots/screenshot-4_t.jpg)]({{ site.baseurl }}/images/screenshots/screenshot-4.png)
 
-{{ site.name }} v1 is still deployed ([link]({{ page.appurl }}), but no longer maintained,
+{{ site.name }} v1 is still deployed ([link]({{ page.appurl }})), but no longer maintained,
 so you may see some parts of it start to fail.
 
 ## Development Setup
