--- a/resources/error.html
+++ b/resources/error.html
@@ -2,7 +2,7 @@
 <html lang="en" localStorageUsed="false">
 <head>
     <title>CivBuddy - Error</title>
-    <!-- build:include include/head.html --><!-- /build -->
+    ${require('./include/_head.html') pageName="error"}
 </head>
 <body>
 
@@ -81,6 +81,6 @@
     </div>
 </div>
 
-<!-- build:include include/footer.html --><!-- /build -->
+${require('./include/_footer.html')}
 </body>
 </html>
