--- a/resources/funds.html
+++ b/resources/funds.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>CivBuddy</title>
-    <!-- build:include include/head.html --><!-- /build -->
+    ${require('./include/_head.html') pageName="funds"}
 
     <script id="commodityTemplate" type="x-tmpl-mustache">
         <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12" id="commodity-{{ commodityId }}">
@@ -183,6 +183,6 @@
     </div>
 </div>
 
-<!-- build:include include/footer.html --><!-- /build -->
+${require('./include/_footer.html')}
 </body>
 </html>
